# custom-font-wizard

./: .gitignore  Cargo.toml  NOTICE  README.ja.md  README.ko.md  README.md  README.zh-CN.md  install.sh  pyproject.toml
SUITE-Variable-woff2/: LICENSE
src/: app.rs  main.rs  model.rs  ui.rs  worker.rs
tests/: test_font_worker.py
worker/: __init__.py  font_engine.py  font_worker.py
